# Advatek_Manager

./: .gitignore  .gitmodules  AdvatekManager.sln  AdvatekManager.vcxproj  CMakeLists.txt  Makefile  README.md  advatek_assistor.cpp  advatek_assistor.h  advatek_assistor.vcxproj  advatek_assistor.vcxproj.filters  advatek_manager.cpp  advatek_manager.h  advatek_manager.sln  advatek_manager.vcxproj  advatek_manager.vcxproj.filters  controllerPack.json  defines.cpp  defines.h  gui_elements.cpp  gui_elements.h  imgui.ini  main.cpp  setup.sh  standard_json_config.h  udpclient.cpp  udpclient.h
AdvatekManager_1.0-0_armhf/DEBIAN/: control
AdvatekManager_1.0-0_x64/DEBIAN/: control
advatek_assistor_1.10-1_arm32/DEBIAN/: control
advatek_assistor_1.10-1_x64/DEBIAN/: control
advatek_assistor_1.2-0_arm32/DEBIAN/: control
advatek_assistor_1.2-0_armhf/DEBIAN/: control
advatek_assistor_1.2-0_x64/DEBIAN/: control
advatek_manager_1.0-0_armhf/DEBIAN/: control
advatek_manager_1.0-0_x64/DEBIAN/: control
standard_json/: Pixlite_16_MkII.json  Pixlite_16_PnP_MkII.json  Pixlite_4_MkII.json
